# pocketFS

./: CMakeLists.txt  main.c
ext/libzip/lib/macos_arm64/: libzip.5.dylib
libpfs/: DCache.cpp  DCache.h  DEntry.cpp  DEntry.h  PFSConfig.cpp  PFSConfig.h  PFSData.cpp  PFSData.h  PFSDevice.cpp  PFSDevice.h  PFSHandleManager.cpp  PFSHandleManager.h  PFSUtil.cpp  PFSUtil.h  PocketFS.cpp  PocketFS.h  libpfs.cpp  libpfs.h
